{{$NEXT}}

0.19    2016-08-20

- Don't rely on '.' being in the current @INC in the code added to a distro's
  Makefile.PL or Build.PL. Reported by Graham Knop. GitHub #7.


0.18    2016-02-27

- The previous release didn't have any Pod. Fixed by Karen Etheridge a while
  back but for some reason I never did a release.


0.17    2014-12-21

- Removed the use of autobox, following Dist::Zilla's lead. Patch by Karen
  Etheridge. GitHub PR #4.


0.16    2014-09-03

- Add a hint for [SurgicalPodWeaver] so it does not try to modify the file (no
  longer possible since version 0.15). Patch by Karen Etheridge. GitHub PR #3.

- Repository moved to the github moose organization.


0.15    2014-08-31

- Generate the Conflicts module as a FromCode file, so its content is not
  calculated until after prereqs are available: restores the -also section
  lost in version 0.09. Patch by Karen Etheridge. GitHub PR #2.

- The generated files now include comments indicating what version of this
  plugin was used to generate them.  Patch by Karen Etheridge. GitHub PR #1.


0.14    2014-04-06

- Same as 0.13001


0.13001 2014-04-06 (TRIAL RELEASE)

- Fixed the x_breaks metadata to properly indicate the problematic version
  range. Patch by Karen Etheridge. RT #94467.


0.13    2013-08-25

- MetaCPAN was picking up the "# ABSTRACT" line in the conflicts module
  template.

- Removed some incorrect docs left over from 0.11


0.12    2013-08-25

- Fix bad conflicts entries added to metaspec (Karen is very sorry!), broken
  in v0.11. Sort of resolves RT #87123.


0.11    2013-07-22

- This plugin now adds conflicts type entries to the distro's Meta
  information, per the CPAN meta spec. Patch by Karen Etheridge. RT #87123.


0.10    2013-06-07

- The x_conflicts key added to the META.* files has now been renamed to
  x_breaks, per the Lancaster Consensus of 2013
  (https://github.com/Perl-Toolchain-Gang/toolchain-site/blob/master/lancaster-consensus.md).
