@@ -123,7 +123,6 @@ sub gather_files {
     my $conflicts_module_template = <<'EOF';
 package # hide from PAUSE
     {{ $module_name }};
-# ABSTRACT: check for conflicts with {{ $dist_name }}
 
 use strict;
 use warnings;
@@ -140,16 +139,38 @@ use Dist::CheckConflicts
 
 1;
 
+!!closing comments!!
+
+__END__
+
+=pod
+
+=for Pod::Coverage *EVERYTHING*
+
+=head1 NAME
+
+{{ $module_name }} - Check for conflicts between {{ $dist_name }} and installed packages
+
+=head1 DESCRIPTION
+
+This module contains information about conflicts between this distribution and
+other CPAN distributions. It does not have any user-facing parts.
+
+This module was generated by {{ ( ref $plugin ) . q{ } . ( $plugin->VERSION // '<no version>' ) }}.
+
+=cut
 EOF
 
     # Avoid false positives in toolchain things -- e.g. [SurgicalPodWeaver],
     # and MetaCPAN seems to look for this when picking a summary for the
     # recent uploads page.
-    $conflicts_module_template
-        .= '# ABST'
-        . 'RACT: Provide information on conflicts for {{ $dist_name }}' . "\n"
+
+    $conflicts_module_template =~ s/\Q!!closing comments!!/
+          '# ABST'
+        . 'RACT: Check for conflicts between {{ $dist_name }} and installed packages' . "\n"
         . '# Dist::Zilla: -'
-        . 'PodWeaver' . "\n";
+        . 'PodWeaver'
+        /e;
 
     sub _generate_conflicts_module {
         my $self = shift;
