@@ -80,7 +80,6 @@ my $version = Dist::Zilla::Plugin::Conflicts->VERSION() || '<self>';
 my $expected_module_content = <<"MODULE_CONTENT";
 package # hide from PAUSE
     DZT::Sample::Conflicts;
-# ABSTRACT: check for conflicts with DZT::Sample
 
 use strict;
 use warnings;
@@ -101,8 +100,27 @@ use Dist::CheckConflicts
 
 1;
 
-# ABSTRACT: Provide information on conflicts for DZT::Sample
+# ABSTRACT: Check for conflicts between DZT::Sample and installed packages
 # Dist::Zilla: -PodWeaver
+
+__END__
+
+=pod
+
+=for Pod::Coverage *EVERYTHING*
+
+=head1 NAME
+
+DZT::Sample::Conflicts - Check for conflicts between DZT::Sample and installed packages
+
+=head1 DESCRIPTION
+
+This module contains information about conflicts between this distribution and
+other CPAN distributions. It does not have any user-facing parts.
+
+This module was generated by Dist::Zilla::Plugin::Conflicts 0.20.
+
+=cut
 MODULE_CONTENT
 
 eq_or_diff(
